--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jest Simon Game</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
         <div data-listener="false" class="circle circle3" id="button3"></div>
         <div data-listener="false" class="circle circle4" id="button4"></div>
         <div class="scorebox" id="score">0</div>
-        <button class="button" onclick="newGame()">new game</button>
+        <button class="button" onclick=newGame()>new game</button>
     </div>
-    <script src="scripts/game.js"></script>
+    <script src="assets/scripts/game.js"></script>
 </body>
 
 </html>
